[package]
name = "cryptopals"
version = "0.1.0"
authors = ["mchlrhw <4028654+mchlrhw@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.8"
lazy_static = "1.4"
pyo3 = {version = "0.8", features= ["extension-module"] }
rayon = "1.3"
