[tool.poetry]
name = "cryptopals"
version = "0.1.0"
description = ""
authors = ["mchlrhw <4028654+mchlrhw@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
