[tool.poetry]
name = "cryptopals"
version = "0.1.0"
description = ""
authors = ["mchlrhw <4028654+mchlrhw@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
hypothesis = "^5.2.0"
pytest = "^5.2"
pytest-black = "^0.3.7"
pytest-coverage = "^0.0"
pytest-isort = "^0.3.1"
pytest-mypy = "^0.4.2"
pytest-flake8 = "^1.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
sort = "Miss"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
